Bug 393752 - Budgeted vs. Actual report: Budgeted values broken if ticks selected to Bi-Monthly, Quarterly or Yearly
Summary: Budgeted vs. Actual report: Budgeted values broken if ticks selected to Bi-Mo...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-02 03:16 UTC by Erik Boritsch
Modified: 2026-04-05 14:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.5
Sentry Crash Report:


Attachments
Example Configuration (413.18 KB, application/vnd.oasis.opendocument.graphics)
2018-09-05 20:48 UTC, Pekka
Details
Example Configuration: Budget Config (131.36 KB, image/png)
2018-09-06 09:36 UTC, Pekka
Details
Example Configuration: Input Config (132.38 KB, image/png)
2018-09-06 09:36 UTC, Pekka
Details
Example Configuration: Report (132.50 KB, image/png)
2018-09-06 09:36 UTC, Pekka
Details
This testing file still shows faulty budget data for quaterly, bi-monthly or yearly (2.41 KB, application/x-kmymoney)
2019-05-31 07:37 UTC, Erik Boritsch
Details
This testing file still shows faulty budget data for quaterly, bi-monthly or yearly (1.39 KB, application/x-kmymoney)
2019-06-04 18:53 UTC, Erik Boritsch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Boritsch 2018-05-02 03:16:25 UTC
Since version 5 the Budgeted vs. Actual report is showing different results depending on the ticks. Monthly ticks work fine.

Bi-Monthly, Quarterly or Yearly show different Budgeted values.

My Kmymoney is standard package from Kubuntu 18.04, package manager shows version 5.0.1, the Help screen in Kmymoney shows 5.0.0, not entirely sure what version do I have.
Comment 1 Michael Carpino 2018-06-23 18:17:10 UTC
It appears the issue is related to the calculation within the first column of the report.  If you change the ticks as noted by Erik it only takes into account a single month of the budgeted amount in the first column when you change from Bi-Monthly, Quarterly or Yearly.
Comment 2 Pekka 2018-09-05 20:48:21 UTC
Created attachment 114797 [details]
Example Configuration

Attachment shows 3 screenshots with example configuration with this problem in one LibreOffice Draw document. I can confirm this bug.
Comment 3 Jack 2018-09-05 21:16:34 UTC
Pekka - did you really intent to assign this bug to yourself?  By removing it from the KMyMoney dev mailing list, it becomes invisible to them.  Even if you intend to submit a patch, I don't think the assignee should change.  Also, the attachment would have been better as a pdf or separate screen shots - at least my browser doesn't know what to do with the mime-type used, forcing an extra step to save before opening.
Comment 4 Pekka 2018-09-06 09:36:03 UTC
Created attachment 114804 [details]
Example Configuration: Budget Config
Comment 5 Pekka 2018-09-06 09:36:32 UTC
Created attachment 114805 [details]
Example Configuration: Input Config
Comment 6 Pekka 2018-09-06 09:36:57 UTC
Created attachment 114806 [details]
Example Configuration: Report
Comment 7 Pekka 2018-09-06 09:37:56 UTC
(In reply to Jack from comment #3)
> Pekka - did you really intent to assign this bug to yourself?  By removing
> it from the KMyMoney dev mailing list, it becomes invisible to them.  Even
> if you intend to submit a patch, I don't think the assignee should change. 
> Also, the attachment would have been better as a pdf or separate screen
> shots - at least my browser doesn't know what to do with the mime-type used,
> forcing an extra step to save before opening.

Sorry, I don't know when I have it assigned to me. Eventually if I test some buttons. Now I reset assigned to default. Hope this is correct now?

I have now add the screenshots as separated files.
Comment 8 Jack 2018-09-06 14:22:41 UTC
Looks much better.  Thank you.  Now we just wait for someone to find and fix the cause.
Comment 9 Thomas Baumgart 2018-09-07 13:29:07 UTC
Side note: simply adding the test file as well would have saved me some time.
Comment 10 Thomas Baumgart 2018-09-07 17:38:52 UTC
Git commit 90c714c693edb88467fe70dcd97277a18dc8e47b by Thomas Baumgart.
Committed on 07/09/2018 at 17:28.
Pushed by tbaumgart into branch '5.0'.

Fix Bi-Monthly, Quarterly or Yearly budget reports
FIXED-IN: 5.0.2

M  +1    -1    kmymoney/plugins/views/reports/core/pivottable.cpp

https://commits.kde.org/kmymoney/90c714c693edb88467fe70dcd97277a18dc8e47b
Comment 11 Erik Boritsch 2019-05-31 07:37:59 UTC
Created attachment 120424 [details]
This testing file still shows faulty budget data for quaterly, bi-monthly or yearly
Comment 12 Erik Boritsch 2019-05-31 07:39:24 UTC
Unfortunately I still see the issue with the budget reports on 5.0.4. The numbers displayed seem to be different, but they are still way off for e.g. quarterly.
Comment 13 Erik Boritsch 2019-05-31 07:40:53 UTC
Forgot to mark the issue as reopen, sorry for spamming.
Comment 14 Thomas Baumgart 2019-05-31 08:36:50 UTC
Testfile is GPG encrypted with key 0x7EEDA4D0C8508D1C (Erik's) so it does not really help :(
Comment 15 Erik Boritsch 2019-06-04 18:53:34 UTC
Created attachment 120576 [details]
This testing file still shows faulty budget data for quaterly, bi-monthly or yearly

I apologize, this one is unencrypted.
Comment 16 Thomas Baumgart 2019-06-05 16:56:16 UTC
Git commit fc01f927393d5a5b037529fd4342c9213dac603f by Thomas Baumgart.
Committed on 05/06/2019 at 16:56.
Pushed by tbaumgart into branch '5.0'.

Fix multi-month budget report

The aggregation of budgets for multiple months (e.g. for quarterly
reports) did not work correctly.

This change fixes the problem.
FIXED-IN: 5.0.5

M  +1    -1    kmymoney/plugins/views/reports/core/pivottable.cpp

https://commits.kde.org/kmymoney/fc01f927393d5a5b037529fd4342c9213dac603f
Comment 17 jlboz 2026-04-05 14:29:13 UTC
This bug is marked as resolved and fixed but it is still present in recent builds such as version 5.2.70-80ba78e which I am running with Windows 11 on a desktop PC: the report 'Budgeted vs. Actual This Year' only shows correct values for budget entries which are monthly.