Fix Bi-Monthly, Quarterly or Yearly budget reports

BUG: 393752
FIXED-IN: 5.0.2